--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -16,7 +16,7 @@
                         </button>
                       </mat-form-field>
                       <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mt-2">
-                        <button mat-raised-button class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mt-2" color="primary">Sign-in</button>
+                        <button mat-raised-button class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mt-2" color="primary" (click)="signIn()">Sign-in</button>
                       </div>
                       <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mt-4 text-right">
                         
