--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 @import '~bootstrap/dist/css/bootstrap.css';
+@import '~font-awesome/css/font-awesome.css';
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined';
 // Plus imports for other components in your app.
 
@@ -14,21 +15,55 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$admintemplate-primary: mat-palette($mat-indigo);
+$admintemplate-primary: mat-palette($mat-cyan);
 $admintemplate-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $admintemplate-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$admintemplate-theme: mat-light-theme($admintemplate-primary, $admintemplate-accent, $admintemplate-warn);
+$admintemplate-light-theme: mat-light-theme($admintemplate-primary, $admintemplate-accent, $admintemplate-warn);
+$admintemplate-dark-theme: mat-dark-theme($admintemplate-primary, $admintemplate-accent, $admintemplate-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($admintemplate-theme);
+@include angular-material-theme($admintemplate-light-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
+
+.darkMode {
+    @include angular-material-theme($admintemplate-dark-theme);
+  }
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.wrapper
+{
+    height:100% !important;
+}
+
+.pointer
+{
+  cursor: pointer;
+}
+
+
+*::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3) !important;
+	background-color: #696767 !important;
+}
+
+*::-webkit-scrollbar
+{
+	width: 4px !important;
+	background-color: #696767 !important;
+}
+
+*::-webkit-scrollbar-thumb
+{
+	background-color: #2c2c2c !important;
+}
