--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 
 <mat-list>
-<mat-list-item class="col-12 col-lg-=12 col-sm-12 col-md-12 col-xl-12" (click)="onItemSelected(item)"
+<mat-list-item class="col-12 col-lg-=12 col-sm-12 col-md-12 col-xl-12 pointer" (click)="onItemSelected(item)"
 [ngClass]="{'active': item.route ? router.isActive(item.route, true): false, 'expanded': expanded}">
   <mat-icon mat-list-icon>{{item.icon}}</mat-icon>
   <div mat-line>{{item.title}}</div>
